--- a/src/views/DeliveryTicket.fxml
+++ b/src/views/DeliveryTicket.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -42,9 +43,9 @@
                               </Label>
                               <VBox prefHeight="545.0" prefWidth="410.0">
                                  <children>
-                                    <GridPane prefHeight="289.0" prefWidth="308.0" vgap="10.0">
+                                    <GridPane prefHeight="499.0" prefWidth="433.0" vgap="10.0">
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="20.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                       </columnConstraints>
                                       <rowConstraints>
@@ -53,7 +54,7 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
@@ -70,15 +71,32 @@
                                           <Label layoutX="10.0" layoutY="137.0" text="Requested Pickup Time" GridPane.rowIndex="5" />
                                           <Label layoutX="10.0" layoutY="167.0" text="Courier" GridPane.rowIndex="6" />
                                           <Label layoutX="10.0" layoutY="197.0" text="Special Remarks" GridPane.rowIndex="7" />
-                                          <DatePicker id="dateTimePickerOrderDate" fx:id="dateTimePickerOrderDate" minWidth="250.0" prefHeight="34.0" prefWidth="255.0" GridPane.columnIndex="1" />
+                                          <DatePicker id="dateTimePickerOrderDate" fx:id="dateTimePickerOrderDate" minWidth="249.0" prefHeight="34.0" prefWidth="249.0" GridPane.columnIndex="1" />
                                           <Label text="Pickup Client" GridPane.rowIndex="2" />
-                                          <TextArea fx:id="textAreaSpecialRemarks" minWidth="250.0" prefHeight="34.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                                          <HBox GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                          <TextArea fx:id="textAreaSpecialRemarks" minWidth="239.0" prefHeight="56.0" prefWidth="239.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                          <VBox GridPane.columnIndex="1" GridPane.rowIndex="5">
                                              <children>
-                                                <Spinner prefHeight="33.0" prefWidth="132.0" />
-                                                <Spinner fx:id="spinnerBoxRequestedPickupTime" minWidth="119.0" prefHeight="33.0" prefWidth="119.0" />
+                                                <HBox>
+                                                   <children>
+                                                      <Spinner fx:id="spinnerRequestedPickupHour" minWidth="23.0" prefHeight="33.0" prefWidth="126.0">
+                                                      <valueFactory>
+              												<SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="0" />
+            												</valueFactory>
+            											</Spinner>
+                                                      <Spinner fx:id="spinnerRequestedPickupMinute" minWidth="40.0" prefHeight="33.0" prefWidth="118.0">
+                                                         <HBox.margin>
+                                                            <Insets left="6.0" />
+                                                         </HBox.margin>
+                                                      </Spinner>
+                                                   </children>
+                                                </HBox>
+                                                <ComboBox fx:id="comboBoxRequestedPickupAMPM" minWidth="15.0" prefHeight="33.0" prefWidth="250.0" promptText="AM">
+                                                   <VBox.margin>
+                                                      <Insets top="5.0" />
+                                                   </VBox.margin>
+                                                </ComboBox>
                                              </children>
-                                          </HBox>
+                                          </VBox>
                                        </children>
                                     </GridPane>
                                  </children>
@@ -169,23 +187,15 @@
                                                       <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                                                    </GridPane.margin>
                                                 </CheckBox>
-                                                <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
                                                    <children>
-                                                      <Spinner fx:id="spinnerActualDepartureTime" />
-                                                      <ComboBox fx:id="comboBoxAMPMActualDepartureTime" prefHeight="33.0" prefWidth="74.0">
-                                                         <padding>
-                                                            <Insets left="10.0" />
-                                                         </padding>
+                                                      <Spinner fx:id="spinnerActualPickupTimeHour" prefHeight="33.0" prefWidth="93.0" />
+                                                      <Spinner fx:id="spinnerActualPickupTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="89.0">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin>
-                                                      </ComboBox>
-                                                   </children>
-                                                </HBox>
-                                                <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                                   <children>
-                                                      <Spinner fx:id="spinnerActualPickUpTime" />
-                                                      <ComboBox fx:id="comboBoxAMPMActualPickupTime" prefHeight="33.0" prefWidth="74.0">
+                                                      </Spinner>
+                                                      <ComboBox fx:id="comboBoxActualPickupTimeAMPM" minWidth="10.0" prefHeight="33.0" prefWidth="70.0" promptText="AM">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin>
@@ -194,8 +204,28 @@
                                                 </HBox>
                                                 <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
                                                    <children>
-                                                      <Spinner fx:id="spinnerActualDeliveryTime" />
-                                                      <ComboBox fx:id="comboBoxAMPMActualDeliveryTime" prefHeight="33.0" prefWidth="74.0">
+                                                      <Spinner fx:id="spinnerActualDeliveryTimeHour" prefHeight="33.0" prefWidth="93.0" />
+                                                      <Spinner fx:id="spinnerActualDeliveryTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="89.0">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </Spinner>
+                                                      <ComboBox fx:id="comboBoxActualDeliveryTimeAMPM" prefHeight="33.0" prefWidth="70.0" promptText="AM">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </ComboBox>
+                                                   </children>
+                                                </HBox>
+                                                <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                   <children>
+                                                      <Spinner fx:id="spinnerActualDepartureTimeHour" prefHeight="33.0" prefWidth="93.0" />
+                                                      <Spinner fx:id="spinnerActualDepartureTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="89.0">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </Spinner>
+                                                      <ComboBox fx:id="comboBoxActualDepartureTimeAMPM" prefHeight="33.0" prefWidth="70.0" promptText="AM">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin>
@@ -204,8 +234,13 @@
                                                 </HBox>
                                                 <HBox GridPane.columnIndex="1" GridPane.rowIndex="4">
                                                    <children>
-                                                      <Spinner fx:id="spinnerActualReturnTIme" />
-                                                      <ComboBox fx:id="comboBoxAMPMActualReturnTIme" prefHeight="33.0" prefWidth="74.0">
+                                                      <Spinner fx:id="spinnerActualReturnTimeHour" prefHeight="33.0" prefWidth="93.0" />
+                                                      <Spinner fx:id="spinnerActualReturnTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="89.0">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </Spinner>
+                                                      <ComboBox fx:id="comboBoxActualReturnTimeAMPM" prefHeight="33.0" prefWidth="70.0" promptText="AM">
                                                          <HBox.margin>
                                                             <Insets left="10.0" />
                                                          </HBox.margin>
@@ -237,7 +272,12 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="buttonGenerateQuote" mnemonicParsing="false" text="Generate Quote" />
+                        <Button fx:id="buttonGenerateQuote" mnemonicParsing="false" text="Calculate Quote" />
+                        <Button mnemonicParsing="false" text="Generate Courier Package">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
                   </HBox>
                </children>
