--- a/src/views/ClientDeliveryReport.fxml
+++ b/src/views/ClientDeliveryReport.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -18,7 +17,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ClientDeliveryReport">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0">
@@ -42,28 +40,19 @@
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <Label text="Client">
-                                             <GridPane.margin>
-                                                <Insets left="70.0" />
-                                             </GridPane.margin>
-                                          </Label>
-                                          <Button fx:id="btnPreview" mnemonicParsing="false" text="Preview" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                          <Button fx:id="btnPreview" mnemonicParsing="false" text="Preview" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="140.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <ComboBox fx:id="comboBoxClient" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" />
-                                          <Label text="Starting" GridPane.rowIndex="2">
+                                          <Label text="Starting" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="70.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <RadioButton fx:id="radioButtonMonth" mnemonicParsing="false" text="Month" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <RadioButton fx:id="radioButtonMonth" mnemonicParsing="false" text="Month" GridPane.columnIndex="1">
                                              <padding>
                                                 <Insets left="200.0" />
                                              </padding>
@@ -71,57 +60,58 @@
                                                 <ToggleGroup fx:id="reportingTimeFrame" />
                                              </toggleGroup>
                                           </RadioButton>
-                                          <RadioButton fx:id="radioButtonWeek" mnemonicParsing="false" selected="true" text="Week" toggleGroup="$reportingTimeFrame" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <RadioButton fx:id="radioButtonWeek" mnemonicParsing="false" selected="true" text="Week" toggleGroup="$reportingTimeFrame" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="20.0" />
                                              </GridPane.margin>
                                           </RadioButton>
-                                          <Label fx:id="labelClient" text="None" GridPane.rowIndex="3">
+                                          <Label fx:id="labelClient" text="None" GridPane.rowIndex="2">
                                              <padding>
                                                 <Insets left="150.0" />
                                              </padding>
                                           </Label>
-                                          <Label fx:id="labelDate" text="None" GridPane.rowIndex="4">
+                                          <Label fx:id="labelDate" text="None" GridPane.rowIndex="3">
                                              <padding>
                                                 <Insets left="150.0" />
                                              </padding>
                                           </Label>
-                                          <Label fx:id="labelNumberofDeliveries" text="None" GridPane.rowIndex="5">
+                                          <Label fx:id="labelNumberofDeliveries" text="None" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                              <padding>
                                                 <Insets left="150.0" />
                                              </padding>
                                           </Label>
-                                          <Label fx:id="labelOnTimeDeliveries" text="None" GridPane.rowIndex="6">
+                                          <Label fx:id="labelOnTimeDeliveries" text="None" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                              <padding>
                                                 <Insets left="150.0" />
                                              </padding>
                                           </Label>
-                                          <Label text="Client Name:" GridPane.rowIndex="3">
+                                          <Label text="Client Name:" GridPane.rowIndex="2">
                                              <padding>
                                                 <Insets left="10.0" />
                                              </padding>
                                           </Label>
-                                          <Label text="Date:" GridPane.rowIndex="4">
+                                          <Label text="Date:" GridPane.rowIndex="3">
                                              <GridPane.margin>
                                                 <Insets left="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <Label text="Number of Deliveries:" GridPane.rowIndex="5">
+                                          <Label text="Number of Deliveries:" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <Label text="On-Time Deliveries:" GridPane.rowIndex="6">
+                                          <Label text="On-Time Delivery Rate:" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                              <GridPane.margin>
                                                 <Insets left="10.0" />
                                              </GridPane.margin>
                                           </Label>
+                                          <DatePicker fx:id="datePickerStartDate" prefHeight="25.0" prefWidth="286.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                        </children>
                                        <padding>
                                           <Insets bottom="20.0" top="20.0" />
                                        </padding>
                                     </GridPane>
-                                    <TableView fx:id="tableReport" prefHeight="367.0" prefWidth="665.0">
+                                    <TableView fx:id="tableReport" prefHeight="219.0" prefWidth="827.0">
                                        <columns>
                                           <TableColumn fx:id="tableColumnOrderDate" prefWidth="139.60000610351562" text="Order Date" />
                                           <TableColumn fx:id="tableColumnPickupClient" prefWidth="154.39999389648438" text="Pickup Client" />
@@ -136,10 +126,11 @@
                            <bottom>
                               <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <GridPane prefHeight="74.0" prefWidth="275.0">
+                                    <GridPane prefHeight="74.0" prefWidth="346.0">
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.199951171875" minWidth="10.0" prefWidth="94.5999755859375" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.5999755859375" minWidth="10.0" prefWidth="110.4000244140625" />
                                        </columnConstraints>
                                        <rowConstraints>
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -151,17 +142,18 @@
                                                 <Insets left="13.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="1">
+                                          <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="50.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="45.0" />
                                              </GridPane.margin>
                                           </Button>
                                           <Button fx:id="btnCreateReport" mnemonicParsing="false" text="Create Report" GridPane.rowIndex="1" />
+                                          <Label fx:id="labelClientCounter" text="Client 1 of 1" GridPane.columnIndex="1" />
                                        </children>
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
