--- a/src/views/Login.fxml
+++ b/src/views/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -40,7 +41,7 @@
                         <Label text="Password" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                         <Label text="Username" GridPane.halignment="CENTER" />
                         <TextField fx:id="textFieldUsername" GridPane.columnIndex="1" />
-                        <TextField fx:id="textFieldPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <PasswordField fx:id="textFieldPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
